@@ -70,7 +70,7 @@ var CloudCommander, io;
                 lResult = lTerm.echo(lStdout);
             
             if(lStderr)
-                lResult = lTerm.error(pMsg.lStderr);
+                lResult = lTerm.error(lStderr);
         }
         else{
             /* if term not accesable
