@@ -14,7 +14,8 @@ exports.listen = function(pServer){
     
     io.sockets.on('connection', function (socket) {
         Socket = socket;
-        socket.send('{stdout:"client connected"}');
+
+        socket.send('{"stdout":"client connected"}');
         
         console.log('server connected');
         
@@ -42,15 +43,14 @@ function getExec(pError, pStdout, pStderr) {
     if (pError !== null) {
         console.log('exec error: ' + pError);
     }
-    else{
-        var lExec = {
-            stdout : pStdout,
-            stderr : pStderr
-        };        
-        
-        var lExec_str = JSON.stringify(lExec);
-        
-        Socket.send(lExec_str);
-        console.log(lExec);
-    }
+
+    var lExec = {
+        stdout : pStdout,
+        stderr : pStderr || pError
+    };        
+    
+    var lExec_str = JSON.stringify(lExec);
+    
+    Socket.send(lExec_str);
+    console.log(lExec);
 }
